Updated main jupyter notebook, improved input
Set a way to ask for parameters from the user in an orderly manner

--- a/frozen_lake_p0.ipynb
+++ b/frozen_lake_p0.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a15aea2e",
    "metadata": {},
    "outputs": [
@@ -286,38 +286,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set the learning rate: 0.3\n",
-      "Set the discount reward: 0.95\n",
-      "Set algorithm to train (Epsilon-greedy: 0 // Softmax: 1): 1\n",
-      "Set algorithm to train (Q-learning: 1 // SARSA: 2): 2\n",
-      "Set a permanent temperature epsilon: 0.95\n"
+      "Set the learning rate [MIN: 0.3, MAX: 0.9, TYPE: float]: 0\n",
+      "Set the discount reward [MIN: 0.8, MAX: 0.95, TYPE: float]: 0\n",
+      "Set algorithm to train (Epsilon-greedy: 0 // Softmax: 1) [MIN: 0, MAX: 1, TYPE: int]: 0\n",
+      "Set algorithm to train (Q-learning: 1 // SARSA: 2) [MIN: 1, MAX: 2, TYPE: int]: 0\n",
+      "Set environment to use (FrozenLake-v1_4x4_noslip: 0 // LunarLander-v3: 1) [MIN: 0, MAX: 1, TYPE: int]: 0\n",
+      "Set a starting epsilon [MIN: 0.1, MAX: 0.999, TYPE: float]: 0\n",
+      "Set a minimum epsilon [MIN: 0.01, MAX: 0.001, TYPE: float]: 0\n",
+      "Set a decay epsilon [MIN: 0.9, MAX: 0.999, TYPE: float]: 0\n",
+      "Set max episodes to [MIN: 20, MAX: 1000, TYPE: int]: 0\n",
+      "Set a window size (used to calculate mean of accumulated rewards) [MIN: 10, MAX: 200, TYPE: int]: 0\n"
      ]
     }
    ],
    "source": [
-    "# Intrinsic RL parameters\n",
-    "alpha = min(max(float(input(\"Set the learning rate: \")),0.3),0.9)     # Learning rate parameter\n",
-    "gamma = min(max(float(input(\"Set the discount reward: \")),0.8),0.95)  # Discount parameter\n",
+    "# Bounds to ask for parameters\n",
+    "ALPHA_BOUND = [0.3,0.9,1]\n",
+    "GAMMA_BOUND = [0.8,0.95,1]\n",
     "\n",
-    "policy = min(max(int(input(\"Set algorithm to train (Epsilon-greedy: 0 // Softmax: 1): \")),0),1)\n",
-    "algorithm = min(max(int(input(\"Set algorithm to train (Q-learning: 1 // SARSA: 2): \")),1),2)\n",
+    "POLICY_BOUND = [0,1,0]\n",
+    "ALGORITHM_BOUND = [1,2,0]\n",
+    "ENVIRONMENT_BOUND = [0,1,0]\n",
+    "\n",
+    "VPOLICY_BOUND = [0.1,0.999,1]\n",
+    "MINVPOLICY_BOUND = [0.01,0.001,1]\n",
+    "DECAYVPOLICY_BOUND = [0.9,0.999,1]\n",
+    "\n",
+    "EPISODESENV0_BOUND = [20,1000,0]\n",
+    "EPISODESENV1_BOUND = [500,5000,0]\n",
+    "\n",
+    "WINDOW_BOUND = [10,200,0]\n",
+    "\n",
+    "def inputBoundedParameter(text,bound):\n",
+    "    datatype = \"int\"\n",
+    "    if bound[2] > 0:\n",
+    "        datatype = \"float\"\n",
+    "\n",
+    "    value = input(text+f\" [MIN: {bound[0]}, MAX: {bound[1]}, TYPE: {datatype}]: \")\n",
+    "    if bound[2] < 1:\n",
+    "        return min(max(int(value),bound[0]),bound[1])\n",
+    "    return min(max(float(value),bound[0]),bound[1])\n",
+    "\n",
+    "    \n",
+    "\n",
+    "# Intrinsic RL parameters\n",
+    "alpha = inputBoundedParameter(\"Set the learning rate\",ALPHA_BOUND)    # Learning rate parameter\n",
+    "gamma = inputBoundedParameter(\"Set the discount reward\",GAMMA_BOUND)  # Discount parameter\n",
+    "\n",
+    "environment = inputBoundedParameter(\"Set environment to use (FrozenLake-v1_4x4_noslip: 0 // LunarLander-v3: 1)\",ENVIRONMENT_BOUND)\n",
+    "algorithm = inputBoundedParameter(\"Set algorithm to train (Q-learning: 1 // SARSA: 2)\",ALGORITHM_BOUND)\n",
+    "policy = inputBoundedParameter(\"Set policy to use (Epsilon-greedy: 0 // Softmax: 1)\",POLICY_BOUND)\n",
     "\n",
     "if algorithm < 2:\n",
-    "    s = \"starting\"\n",
+    "    s1 = \"starting\"\n",
     "else:\n",
-    "    s = \"permanent\"\n",
+    "    s1 = \"permanent\"\n",
     "\n",
     "if policy < 1:\n",
-    "    s += \" epsilon\"\n",
+    "    s2 = \"epsilon\"\n",
     "else:\n",
-    "    s += \" temperature\"\n",
+    "    s2 = \"temperature\"\n",
     "\n",
     "\n",
-    "v_policy = min(max(float(input(f\"Set a {s} epsilon: \")),0.999),0.9)\n",
+    "v_policy = inputBoundedParameter(f\"Set a {s1} {s2}\",VPOLICY_BOUND)\n",
     "\n",
     "if algorithm < 2:\n",
-    "    min_v_policy = min(max(float(input(f\"Set a minimum epsilon: \")),0.999),0.9)\n",
-    "    decay_v_policy = min(max(float(input(f\"Set a {s} epsilon: \")),0.999),0.9)\n",
+    "    min_v_policy = inputBoundedParameter(f\"Set a minimum {s2}\",MINVPOLICY_BOUND)\n",
+    "    decay_v_policy = inputBoundedParameter(f\"Set a decay {s2}\",DECAYVPOLICY_BOUND)\n",
+    "\n",
+    "# Total episodes of the training\n",
+    "if environment < 1:\n",
+    "    envname = \"FrozenLake-v1\"\n",
+    "    episodes = inputBoundedParameter(\"Set max episodes\",EPISODESENV0_BOUND)\n",
+    "else:\n",
+    "    envname = \"LunarLander-v3\"\n",
+    "    episodes = inputBoundedParameter(\"Set max episodes\",EPISODESENV1_BOUND)\n",
+    "    \n",
+    "window = inputBoundedParameter(\"Set a window size (used to calculate mean of accumulated rewards)\",WINDOW_BOUND) \n",
+    "\n",
     "\n",
     "if policy < 1:\n",
     "    epsilon = v_policy\n",
@@ -354,7 +400,7 @@
     "\n",
     "# =========== LUNAR-LANDER ONLY ===========\n",
     "\n",
-    "bins = 12 # Amount of subdivision space is divided\n",
+    "bins = 12 # Amount of subdivisions space is divided\n",
     "\n",
     "# State discretization values -> x,y,vx,vy,angle,w,contactleg1,contactleg2\n",
     "state_bins = [\n",
@@ -379,7 +425,6 @@
     "            disc.append(int(state[i]))\n",
     "    return tuple(disc)\n",
     "\n",
-    "window = 100\n",
     "target_mean_reward = 200  # Standard objective"
    ]
   },
@@ -393,28 +438,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episodio 100 | Recompensa -256.0 | Media(100) -199.1 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.0m\n",
-      "Episodio 200 | Recompensa -369.7 | Media(100) -199.4 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.0m\n",
-      "Episodio 300 | Recompensa -120.3 | Media(100) -184.3 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.1m\n",
-      "Episodio 400 | Recompensa -239.5 | Media(100) -167.4 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.1m\n",
-      "Episodio 500 | Recompensa -125.3 | Media(100) -166.1 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.1m\n",
-      "Episodio 600 | Recompensa -137.2 | Media(100) -184.9 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.1m\n",
-      "Episodio 700 | Recompensa -254.2 | Media(100) -176.0 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.2m\n",
-      "Episodio 800 | Recompensa -100.4 | Media(100) -163.9 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.2m\n",
-      "Episodio 900 | Recompensa -319.9 | Media(100) -172.2 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.2m\n",
-      "Episodio 1000 | Recompensa -187.4 | Media(100) -186.7 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.2m\n",
-      "Episodio 1100 | Recompensa -388.4 | Media(100) -183.1 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.2m\n",
-      "Episodio 1200 | Recompensa -211.9 | Media(100) -305.5 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.4m\n",
-      "Episodio 1300 | Recompensa -97.5 | Media(100) -192.7 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.4m\n",
-      "Episodio 1400 | Recompensa -161.7 | Media(100) -178.5 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.4m\n",
-      "Episodio 1500 | Recompensa -151.2 | Media(100) -384.2 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.8m\n",
-      "Episodio 1600 | Recompensa -106.7 | Media(100) -188.2 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.8m\n",
-      "Episodio 1700 | Recompensa -150.7 | Media(100) -247.8 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.9m\n",
-      "Episodio 1800 | Recompensa -85.2 | Media(100) -173.9 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.9m\n",
-      "Episodio 1900 | Recompensa -104.1 | Media(100) -192.7 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.9m\n",
-      "Episodio 2000 | Recompensa -97.5 | Media(100) -167.9 | eps 0.999 | temp 0.999 | alpha 0.300 | t 0.9m\n",
       "\n",
-      "Modelo guardado como lunarlander_qtable.pkl\n",
+      "Modelo guardado como FrozenLake-v1_qtable.pkl\n",
       "\n"
      ]
     }
@@ -436,10 +461,16 @@
     "best_mean = -np.inf\n",
     "\n",
     "# Environment initialization\n",
-    "env = gym.make(\"LunarLander-v3\",render_mode=None)\n",
+    "if environment < 1:\n",
+    "    env = gym.make(envname,desc=None,map_name=\"4x4\",is_slippery=False,reward_schedule=(10, -1, -1),render_mode=\"human\")\n",
+    "else:\n",
+    "    env = gym.make(envname,render_mode=None)\n",
     "\n",
     "# Q-table first initialization\n",
-    "Q = np.zeros([bins+1] * 6 + [2, 2] + [env.action_space.n])\n",
+    "if environment < 1:\n",
+    "    Q = (-1)*np.ones([env.observation_space.n, env.action_space.n])\n",
+    "else:\n",
+    "    Q = np.zeros([bins+1] * 6 + [2, 2] + [env.action_space.n])\n",
     "\n",
     "best_Q = None\n",
     "\n",
@@ -454,8 +485,9 @@
     "decay_temperature = 0.995   # Decay parameter for softmax (enacted each episode once goal is reached)\n",
     "\n",
     "\n",
-    "episodes = 2000  # Total episodes of the training\n",
-    "# max_steps = 20  # Maximum steps allowed before terminating episode no matter what\n",
+    "if environment < 1:\n",
+    "    max_steps = 20  # Maximum steps allowed before terminating episode no matter what\n",
+    "\n",
     "mean_recent = -200\n",
     "\n",
     "# Flag and episode number when objective is reached for first time\n",
@@ -468,12 +500,16 @@
     "for episode in range(1,episodes+1):\n",
     "    # Environment reset\n",
     "    state, _ =env.reset()\n",
-    "    state = discretize(state)\n",
     "\n",
     "    # Prepare store data for this episode (epsilon only used for Q-learning + ep_greedy)\n",
-    "    ev_state.append([])\n",
-    "    ev_act.append([])\n",
-    "    ev_reward.append([])\n",
+    "    if environment < 1:\n",
+    "        ev_state.append([])\n",
+    "        ev_act.append([])\n",
+    "        ev_reward.append([])\n",
+    "        steps = 0\n",
+    "    else:\n",
+    "        state = discretize(state)\n",
+    "\n",
     "    ev_epsilon.append(epsilon)\n",
     "    acc_reward.append(0.0)\n",
     "\n",
@@ -498,7 +534,9 @@
     "\n",
     "        # Step execution\n",
     "        next_state,reward,terminated,truncated,_ = env.step(act)\n",
-    "        next_state = discretize(next_state)\n",
+    "        \n",
+    "        if environment > 1:\n",
+    "            next_state = discretize(next_state)\n",
     "        \n",
     "\n",
     "        # Next best action calculation (Motecarlo and Q-learning only)\n",
@@ -515,9 +553,10 @@
     "        state = next_state\n",
     "        \n",
     "        # Save all gathered step info\n",
-    "        #ev_act[episode-1].append(act)\n",
-    "        #ev_reward[episode-1].append(reward)\n",
-    "        #ev_state[episode-1].append(state)\n",
+    "        if environment < 1:\n",
+    "            ev_act[episode-1].append(act)\n",
+    "            ev_reward[episode-1].append(reward)\n",
+    "            ev_state[episode-1].append(state)\n",
     "        acc_reward[episode-1] += reward\n",
     "\n",
     "\n",
@@ -527,9 +566,10 @@
     "            ep_ob_reached = episode\n",
     "        \n",
     "        # End condition, so each episode doesn't take absurdly long\n",
-    "        # if steps >= max_steps:\n",
-    "        #   terminated = True\n",
-    "        # steps += 1\n",
+    "        if environment < 1:\n",
+    "            if steps >= max_steps:\n",
+    "                terminated = True\n",
+    "            steps += 1\n",
     "\n",
     "    if objective_reached and algorithm < 2:\n",
     "        epsilon = max(min_epsilon,epsilon*decay_epsilon)\n",
@@ -549,15 +589,15 @@
     "        mean_recent = np.mean(acc_reward[-min(len(acc_reward), window):])\n",
     "        elapsed = time.time() - start_time\n",
     "        print(\n",
-    "            f\"Episodio {episode} | Recompensa {acc_reward[episode-1]:.1f} | Media({min(len(acc_reward), window)}) \"\n",
+    "            f\"Episode {episode} | Reward {acc_reward[episode-1]:.1f} | Mean({min(len(acc_reward), window)}) \"\n",
     "            f\"{mean_recent:.1f} | eps {epsilon:.3f} | temp {temperature:.3f} | alpha {alpha:.3f} | t {elapsed/60:.1f}m\"\n",
     "        )\n",
     "\n",
     "# Guardar el mejor modelo disponible\n",
     "to_save = best_Q if best_Q is not None else Q\n",
-    "with open(\"lunarlander_qtable.pkl\", \"wb\") as f:\n",
+    "with open(f\"{envname}_qtable.pkl\", \"wb\") as f:\n",
     "    pickle.dump(to_save, f)\n",
-    "print(\"\\nModelo guardado como lunarlander_qtable.pkl\\n\")\n",
+    "print(f\"\\nModelo guardado como {envname}_qtable.pkl\\n\")\n",
     "\n",
     "env.close() # Close environment"
    ]
@@ -569,48 +609,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ================ SARSA ALGORITHM (EPSILON GREEDY) ================\n",
-    "\n",
-    "# Storing variables\n",
-    "\n",
-    "# Action, reward and next state matrix [i][j] (i -> Episode // j -> Step on that episode)\n",
-    "ev_act = []\n",
-    "ev_reward = []\n",
-    "ev_state = []\n",
-    "\n",
-    "# Epsilon and accumulated reward matrix (length = episodes)\n",
-    "ev_epsilon = [] \n",
-    "acc_reward = []\n",
-    "\n",
-    "# Environment initialization\n",
-    "env = gym.make('FrozenLake-v1',desc=None,map_name=\"4x4\",is_slippery=False,reward_schedule=(10, -1, -1))\n",
-    "\n",
-    "# Q-table first initialization\n",
-    "Q = (-1)*np.ones([env.observation_space.n, env.action_space.n])\n",
-    "\n",
-    "\n",
-    "epsilon = 0.5   # Permanent (SARSA only) epsilon value\n",
-    "\n",
-    "episodes = 100  # Total episodes of the training\n",
-    "max_steps = 20  # Maximum steps allowed before terminating episode no matter what\n",
-    "\n",
-    "# Flag and episode number when objective is reached for first time\n",
-    "objective_reached = False\n",
-    "ep_ob_reached = -1\n",
-    "\n",
     "# Training phase\n",
     "for episode in range(episodes):\n",
     "    # Environment reset\n",
     "    act, _ =env.reset()\n",
     "    state = 0\n",
     "    steps = 0\n",
-    "    \n",
-    "    # Prepare store data for this episode (epsilon only used for Q-learning + ep_greedy)\n",
-    "    ev_act.append([])\n",
-    "    ev_reward.append([])\n",
-    "    ev_state.append([])\n",
-    "    ev_epsilon.append(epsilon)\n",
-    "    acc_reward.append(0.0)\n",
     "    \n",
     "    # Set termination flags\n",
     "    terminated = False\n",
@@ -2234,9 +2238,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mani",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mani"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2248,7 +2252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
